style.css
* {
    padding: 0;
    margin: 0;
    border: 0;
    box-sizing: border-box;
}

html {
    height: 100%;
}

body {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #FFEBB2;
}

.main-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
}

.btn-container {
    position: absolute;
    top: -3em;
    
}

#btn {
    padding: 0.5em;
}

#board {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-wrap: nowrap;
    max-width: 70vw;
    max-height: 70vh;
}

.row {
    border-top: dotted black 1px;
}

.row:last-child {
    border-right: dotted black 1px;
}

.white-square {
    background-color: white;
    border-left: dotted black 1px;
    border-bottom: dotted black 1px;
}

.black-square {
    background-color: black;
    border-left: dotted black 1px;
    border-bottom: dotted black 1px;
}

